Added an init script for the db docker server, and updated server documentation route

--- a/server/database/docker-compose.yml
+++ b/server/database/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - ${PG_PORT}:5432
     networks:
       - database
+    volumes:
+      - ./my_init.sql:/docker-entrypoint-initdb.d/my_init.sql
 
   adminer:
     image: adminer
