--- a/server/database/docker-compose.yml
+++ b/server/database/docker-compose.yml
@@ -7,7 +7,7 @@ networks:
 
 services:
   db:
-    image: postgres
+    image: postgres:11.5
     restart: ${RESTART_POLICY}
     environment:
       POSTGRES_USER: ${PG_USERNAME}
