--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
     "node-schedule": "^1.3.2",
     "pg": "^7.12.1",
     "sequelize": "^5.21.2"
