--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "ethers": "^4.0.39",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
     "node-schedule": "^1.3.2",
