--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "fortmatic": "^1.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-notifications-component": "^2.2.3",
     "react-scripts": "2.1.1",
+    "react-toast-notifications": "^2.2.5",
     "react-youtube": "^7.9.0",
     "rimble-ui": "^0.10.0",
     "styled-components": "^4.4.1",
