--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,10 @@
     "@burner-wallet/core": "0.0.26",
     "@burner-wallet/ui": "0.0.40",
     "@dfuse/client": "^0.3.0",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "@toruslabs/torus-embed": "^0.2.6",
     "fortmatic": "^1.0.0",
     "react": "^16.6.3",
